--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -1,63 +1,77 @@
 <meta name="format-detection" content="telephone=no">
 <div class="ms-controller" :controller="cardBuy">
     <div class="card-frame">
-
         <div class="card-font" style="height: 0;">
             <div class="card-cardNo">
                 <span>{{getToday('date').slice(0,4)}}</span>
                 <span>{{getToday('date').slice(5,7)}}
                 {{getToday('date').slice(8,10)}}</span>
                 <span>*****</span>
-            </div><br>
+            </div>
+            <br>
             <div style="display: inline-block;">
                 <span style="font-size: 8px;">
                     VALID THRU
-                <span>&nbsp;&nbsp;</span>
-                    {{getDates(365).slice(0,4)}}/{{getToday('date').slice(5,7)}}
-                </span><br>
+                <span>&nbsp;&nbsp;</span> {{getDates(365).slice(0,4)}}/{{getToday('date').slice(5,7)}}
+                </span>
+                <br>
                 <span>C A R D H O L D E R</span>
             </div>
         </div>
         <img class="card-buy-img" :attr="{src:@data.imgUrl}" alt="">
-
         <section style="padding: 10px 0 5px 10px;">
-            <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 25px;">¥{{@data.amount}}</div>
-            <div class="bs-text-smaller bs-text-51" style="margin-bottom: 10px;">
-                <span>只需预存 {{@data.amount}} 元，即可升级成为本宿{{@data.name}}会员，有效期为 12 个月。{{@data.name}}会员入住所有本宿酒店均无需交纳押金，还可享受如下优惠：</span>
-            </div>
+            <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 15px;">预存 {{@data.amount}}</div>
             <div class="card-buy-item">
-                <img class="card-buy-item-left" src='img/card/card-discount.png' style="width: 49px;height: 30px;" alt="">
-                <div class="card-buy-item-right bs-text-153 bs-text-smaller">凭此卡入住任意本宿酒店，即可享受 {{@data.discount*10}} 折优惠</div>
-            </div>
-            <div class="card-buy-item">
-                <img class="card-buy-item-left" src='img/card/card-award.png' style="width: 50px;height: 48px;" alt="">
-                <div class="card-buy-item-right bs-text-153 bs-text-smaller">每月返还预存金额 {{@data.monthReturnAmount}} 元, {{@data.totalReturnTimes}} 个月全额返还预存款。<br>用户可直接提现或在店内消费。</div>
-            </div>
-            <div class="card-buy-item">
-                <img class="card-buy-item-left" src='img/card/card-promotion.png' style="width: 50px;height: 48px;" alt="">
-                <div class="card-buy-item-right bs-text-153 bs-text-smaller">本宿{{@data.name}}会员免审核获得每月最高 {{@data.monthShareTimes*@data.everyTimeAward}} 元推广奖励金额。<br>奖励可直接提现或在店内消费。</div>
+                <div class="card-buy-left">
+                    <div class="card-buy-circle bs-text-small">
+                        <div class="card-buy-fan">
+                            <div class="bs-text-red">{{@data.monthReturnAmount}}元/月</div>
+                            <div class="bs-text-gray" style="font-size: 8px;">现金返还</div>
+                        </div>
+                    </div>
+                    <div class="bs-text-small bs-text-gray card-buy-con1">预存款现金返还，同时亦可享受黑卡至尊服务</div>
+                </div>
+                <div class="card-buy-right bs-text-small">
+                    <div class="card-buy-con2">
+                        <div style="margin-left: 10px;">
+                            推广奖励
+                            <br>
+                            <span class="card-buy-right-down bs-text-red">{{@data.everyTimeAward * @data.monthShareTimes}}元/月</span>
+                            <span class="card-buy-right-down bs-text-gray" style="margin-left: 7px; font-size: 8px;">现金</span>
+                        </div>
+                    </div>
+                    <div class="card-buy-con3">
+                        <div style="margin-left: 10px;">
+                            抽奖次数加速
+                            <br>
+                            <span class="card-buy-right-down bs-text-red">现金</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
-
-    <section class="bs-text-small bs-text-51" style="padding: 12px 10px 20px 10px;">
-        <div style="margin-bottom: 15px;" :on-tap="@chooseType(2)" :if="isweixin">
-            <div class="hiddenbox">
-                <div class="check-icon" :class="@payType == 2?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(2)"></div>
+    <div style="margin: 5px; background-color: white;">
+        <section class="bs-text-small bs-text-51" style="padding: 17px 10px 20px 10px;">
+            <div style="margin-bottom: 15px;" :on-tap="@chooseType(2)" :if="isweixin">
+                <div class="hiddenbox">
+                    <div class="check-icon" :class="@payType == 2?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(2)"></div>
+                </div>
+                <span :on-tap="@chooseType(2)">微信支付</span>
             </div>
-            <span :on-tap="@chooseType(2)">微信支付</span>
-        </div>
-        <div :on-tap="@chooseType(1)">
-            <div class="hiddenbox">
-                <div class="check-icon" :class="@payType == 1?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(1)" ></div>
+            <div :on-tap="@chooseType(1)">
+                <div class="hiddenbox">
+                    <div class="check-icon" :class="@payType == 1?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(1)"></div>
+                </div>
+                <span :on-tap="@chooseType(1)">支付宝支付（请在浏览器中打开）</span>
             </div>
-            <span :on-tap="@chooseType(1)" >支付宝支付（请在浏览器中打开）</span>
-        </div>
-        <div class="bs-text-small" style="margin-top: 30px;" :on-tap="@clickIsAgree">
-            <span :class="['isAgree', @isAgree?'checked':'unchecked']"></span> 我同意
-            <span class="bs-text-gold" :on-tap="@openRule">本宿会员条款</span>
-        </div>
-    </section>
-
-    <button class="nav-bottom-btn" type="button" :attr="{disabled:@isDisabled}" :on-tap="@buyCard">确认购买</button>
+            <div class="bs-text-small" style="margin-top: 30px;" :on-tap="@clickIsAgree">
+                <span :class="['isAgree', @isAgree?'checked':'unchecked']"></span> 我同意
+                <span class="bs-text-gold" :on-tap="@openRule">本宿会员条款</span>
+            </div>
+        </section>
+    </div>
+    <div style="margin: 0 10px;">
+        <button class="nav-bottom-btn" type="button" style="width: 100%;" :attr="{disabled:@isDisabled}" :on-tap="@buyCard">升级成为VIP会员</button>
+    </div>
 </div>
