购买页面小点修改

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -37,14 +37,14 @@
                             推广奖励
                             <br>
                             <span class="card-buy-right-down bs-text-red">{{@data.everyTimeAward * @data.monthShareTimes}}元/月</span>
-                            <span class="card-buy-right-down bs-text-gray" style="margin-left: 7px; font-size: 8px;">现金</span>
+                            <span class="card-buy-right-down bs-text-gray" style="margin-left: 7px; font-size: 8px;">现金返还</span>
                         </div>
                     </div>
                     <div class="card-buy-con3">
                         <div style="margin-left: 10px;">
                             抽奖次数加速
                             <br>
-                            <span class="card-buy-right-down bs-text-red">现金</span>
+                            <span class="card-buy-right-down bs-text-red">×</span>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             </div>
         </section>
     </div>
-    <div style="margin: 0 10px;">
+    <div style="margin: 15px 10px;">
         <button class="nav-bottom-btn" type="button" style="width: 100%;" :attr="{disabled:@isDisabled}" :on-tap="@buyCard">升级成为VIP会员</button>
     </div>
 </div>
