--- a/js/pages/lottery/lottery.html
+++ b/js/pages/lottery/lottery.html
@@ -157,7 +157,7 @@
             </section>
             <section style="border-bottom: 1px solid #ccc;">
                 <img src="../img/card/prize-star.png" style="width: 55px;position: absolute;top: 6px;left: 12px;" alt="">
-                <img src="../img/card/con.png" style="width: 130px;position: relative;top: 5px;" alt="">
+                <img src="../img/card/prize-con.png" style="width: 130px;position: relative;top: 5px;" alt="">
                 <img src="../img/card/prize-stars.png" style="    position: absolute;left: -4px;top: 73px;width: 66px;" alt="">
                 <img src="../img/card/prize-stars.png" style="    position: absolute;right: 4px;top: 73px;width: 66px;"alt="">
                 <div class="flex-column" style="margin:6px auto;">
