--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -11,7 +11,7 @@
             <div style="padding: 5px;" ms-if="cardList[0].id">
                 <img ms-repeat="cardList" ms-attr-src="el.img" style="width:22px;" ms-css-margin-right="$index==0?'12px':''" alt="" ms-on-tap="goCard(el.id, $index)">
             </div>
-            <div class="bs-text-smaller bs-text-gold" style="padding: 5px;" ms-if="!cardList[0].id" ms-on-tap="goCard(0, 0)">成为本宿会员</div>
+            <div class="bs-text-smaller bs-text-gold" style="padding: 5px;" ms-if="!cardList[0].id" ms-on-tap="goCard(0, 0)">升级VIP会员</div>
         </div>
 
         <div class="control bs-bg-black bs-text-white">
