普通会员卡相关修改

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -44,7 +44,7 @@
                         <div style="margin-left: 10px;">
                             抽奖次数加速
                             <br>
-                            <span class="card-buy-right-down bs-text-red">×</span>
+                            <span class="card-buy-right-down bs-text-red">×{{@data.lotteryShareTimes}}</span>
                         </div>
                     </div>
                 </div>
