--- a/js/pages/card/list.html
+++ b/js/pages/card/list.html
@@ -18,7 +18,7 @@
                 <br>
                 加入本宿推广奖励计划，可获得丰厚现金奖励。
                 <br>
-                参加抽奖次数加速 <span class="bs-text-red">n</span> 倍。
+                参加抽奖次数加速 <span class="bs-text-red">{{el.lotteryShareTimes}}</span> 倍。
             </div>
         </div>
         <img class="card-list-img" :attr="{src:el.imgUrl}" alt="" :on-tap="@goBuyCard(el.id)">
