--- a/js/pages/card/show.html
+++ b/js/pages/card/show.html
@@ -45,7 +45,7 @@
 
         <div class="bs-text-normal">欢迎您加入本宿大家庭，成为我们尊贵的VIP用户，在这里您不仅能享受到全新的住宿体验、VIP级客户服务，亦能通过帮助我们推广获得丰厚的收入！</div>
         <br>
-        <div class="bs-text-normal">{{@data.name}}会员专属微信客服：木一君（微信客服：****），为了保障能及时提供服务，建议您尽快添加好友；
+        <div class="bs-text-normal">{{@data.name}}会员专属微信客服：木一君（微信客服：bensuer007），为了保障能及时提供服务，建议您尽快添加好友；
         <br>
         如果您对本宿会员有任何疑问，欢迎咨询客服：{{SERVICECALL}}；
         <br>
