--- a/js/pages/card/card-withdraw.html
+++ b/js/pages/card/card-withdraw.html
@@ -36,7 +36,11 @@
         </div>
         <div class="bs-text-xx-larger" style="display: inline-block;">¥</div>
         <input class="bs-text-xx-larger" type="tel" :duplex="@cash">
-        <div class="bs-text-x-smaller" style="margin-top: 5px;">可提现余额 {{@cashAmount}} 元</div>
+        <div class="bs-text-x-smaller" style="margin-top: 5px;">
+            可提现余额 {{@cashAmount}} 元<br>
+            <!-- 可提现次数 n 次 -->
+        </div>
     </div>
-    <div class="bs-text-x-smaller bs-text-153" style="position: absolute;bottom: 0;padding: 10px 20px;">提现金额会在3～5个工作日到账</div>
+    <div class="bs-text-x-smaller bs-text-153" style="position: absolute;bottom: 0;padding: 10px 20px;">
+    每月可提现次数为1次，每次提现金额不能少于60元<br>提现金额会在3～5个工作日到账</div>
 </div>
