--- a/js/pages/lottery/lottery.html
+++ b/js/pages/lottery/lottery.html
@@ -132,7 +132,7 @@
         <div class="lottery-btn-rule" ms-click="openRule">活动规则</div>
     </div>
     <div class="bs-text-102 bs-text-large" style="padding: 10px 16px;">获得更多抽奖机会</div>
-    <div class="lottery-task bs-bg-white" ms-repeat="task" ms-click="goPromotion">
+    <div class="lottery-task bs-bg-white" ms-repeat="task" ms-click="goPromotion(el.type)">
         <div style="align-items: center;" class="flex-column">
             <img ms-attr-src="el.img" alt="" style="width: 40px;margin: 15px;">
         </div>
@@ -148,7 +148,7 @@
                 +<span class="bs-text-red" style="padding-top: 10px;">{{el.add}}</span> 次抽奖机会</div>
         </section>
         <div class="flex-column">
-            <button type="button" class="lottery-btn-go bs-text-small bs-bg-black bs-text-white">去{{!$index?'完成':'升级'}}</button>
+            <button type="button" ms-if="cardTypeList.indexOf(4)>-1||cardTypeList.indexOf(el.type)>-1" class="lottery-btn-go bs-text-small bs-bg-black bs-text-white">去{{getText(el.type)}}</button>
         </div>
     </div>
     
