抽奖页面“去看看”调到log页面

--- a/js/pages/lottery/lottery.html
+++ b/js/pages/lottery/lottery.html
@@ -173,7 +173,7 @@
 
             <section style="display: flex;justify-content: space-around;">
                 <button class="bs-bg-yellow prizeModal-btn" type="button" id="closeBtn">知道了</button>
-                <button class="bs-bg-red prizeModal-btn" type="button">去看看</button>
+                <button class="bs-bg-red prizeModal-btn" type="button" ms-click="goLog()">去看看</button>
             </section>
         </div>
     </div>
