--- a/js/pages/card/promotion.html
+++ b/js/pages/card/promotion.html
@@ -5,7 +5,6 @@
 }
 
 .swiper-slide {
-    background-size: contain;
     padding: 0;
 }
 
@@ -14,7 +13,6 @@
     background-size: contain;
     height: 100%;
 }
-
 </style>
 <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -37,13 +35,14 @@
             <div style="background-image: url(img/promotion_6.png);"></div>
         </div>
         <div class="swiper-slide">
-            <div style="background-image: url(img/promotion_7.png);"></div>
+            <div style="background-image: url(img/promotion_7.png);">
+               <div style="height: 100px; background-color: transparent; position: fixed; bottom: 0;" onclick="location.href='card-list.html'"></div>
+            </div>
         </div>
     </div>
 </div>
 <!-- Swiper JS -->
 <script src="../js/lib/swiper.min.js"></script>
-<!-- Initialize Swiper -->
 <script>
 var swiper = new Swiper('.swiper-container', {
     width: window.innerWidth - 20,
