--- a/js/pages/card/introduce.html
+++ b/js/pages/card/introduce.html
@@ -1,4 +1,4 @@
-<div class="introduce">
+<div class="introduce ms-controller" :controller="introduce">
     <div>
         <div class="introduce-title">
             <div><img src="img/logo.jpg"></div>
@@ -69,37 +69,61 @@
                 <tr>
                     <td class="introduce-table-grey">入住折扣</td>
                     <td>逐时折扣</td>
-                    <td>8.8折</td>
-                    <td>8折</td>
-                    <td>7.5折</td>
+                    <td>{{@data[2].discount*10}}折</td>
+                    <td>{{@data[1].discount*10}}折</td>
+                    <td>{{@data[0].discount*10}}折</td>
                 </tr>
                 <tr>
                     <td class="introduce-table-grey">升级条件</td>
                     <td>注册</td>
-                    <td>预存<br>3600元</td>
-                    <td>预存<br>9600元</td>
-                    <td>预存<br>27000元</td>
+                    <td>预存
+                        <br>3600元</td>
+                    <td>预存
+                        <br>9600元</td>
+                    <td>预存
+                        <br>27000元</td>
                 </tr>
                 <tr>
                     <td class="introduce-table-grey">预存款返还（12次/权益年）</td>
                     <td>-</td>
-                    <td>300<br>现金</td>
-                    <td>800<br>现金</td>
-                    <td>2250<br>现金</td>
+                    <td>{{@data[2].monthReturnAmount}}
+                        <br>现金</td>
+                    <td>{{@data[1].monthReturnAmount}}
+                        <br>现金</td>
+                    <td>{{@data[0].monthReturnAmount}}
+                        <br>现金</td>
                 </tr>
                 <tr>
-                    <td class="introduce-table-grey">推广奖励<br>（一个权益年内）</td>
-                    <td>推广一次获<br>得2次抽奖机会<br>&emsp;<br>&emsp;</td>
-                    <td>推广一次获<br>得4次抽奖机会<br>+<br>60 元/月</td>
-                    <td>推广一次获<br>得6次抽奖机<br> + <br>160 元/月</td>
-                    <td>推广一次获<br>得8次抽奖机会<br> + <br>450 元/月</td>
+                    <td class="introduce-table-grey">推广奖励
+                        <br>（一个权益年内）</td>
+                    <td>推广一次获
+                        <br>得{{@data[3].lotteryShareTimes}}次抽奖机会
+                        <br>&emsp;
+                        <br>&emsp;
+                        <br>&emsp;</td>
+                    <td>推广一次获
+                        <br>得{{@data[2].lotteryShareTimes}}次抽奖机会
+                        <br>+
+                        <br>{{@data[2].everyTimeAward*@data[2].monthShareTimes}} 元/月</td>
+                    <td>推广一次获
+                        <br>得{{@data[1].lotteryShareTimes}}次抽奖机
+                        <br> +
+                        <br>{{@data[1].everyTimeAward*@data[1].monthShareTimes}} 元/月</td>
+                    <td>推广一次获
+                        <br>得{{@data[0].lotteryShareTimes}}次抽奖机会
+                        <br> +
+                        <br>{{@data[0].everyTimeAward*@data[0].monthShareTimes}} 元/月</td>
                 </tr>
                 <tr>
                     <td class="introduce-table-grey">抽奖游戏</td>
-                    <td>赠送 2 次<br>抽奖机会</td>
-                    <td>赠送 10 次<br>抽奖机会</td>
-                    <td>赠送 20 次<br>抽奖机会</td>
-                    <td>赠送 30 次<br>抽奖机会</td>
+                    <td>赠送 {{@data[3].lotteryDefaultTimes}} 次
+                        <br>抽奖机会</td>
+                    <td>赠送 {{@data[2].lotteryDefaultTimes}} 次
+                        <br>抽奖机会</td>
+                    <td>赠送 {{@data[1].lotteryDefaultTimes}} 次
+                        <br>抽奖机会</td>
+                    <td>赠送 {{@data[0].lotteryDefaultTimes}} 次
+                        <br>抽奖机会</td>
                 </tr>
                 <tr>
                     <td class="introduce-table-grey"></td>
@@ -111,16 +135,17 @@
     <div>
         <div class="introduce-title" style="margin-top: 15px; margin-bottom: 30px; border-bottom: 1px solid #ccc; padding-bottom: 20px;">
             <div class="introduce-note">※预存款返还时间：用户交纳预存款之日起15天后初次返，以后每隔30天返还一次。
-            <div class="introduce-note">※<a href="card-introduce-picture.html" style="color: #baa071">会员卡升级条件为什么要预存款？</a></div>
+                <div class="introduce-note">※<a href="card-introduce-picture.html" style="color: #baa071">会员卡升级条件为什么要预存款？</a></div>
+            </div>
         </div>
-    </div>
-    <div>
-        <div class="introduce-title">
-            <div><img src="img/logo.jpg"></div>
-            <div class="introduce-title2">如何获得推广奖励？</div>
-        </div>
-        <div class="introduce-content" style="border: none;">
-            所有会员均可参加本宿的推广奖励计划。普通会员每转发本宿一条微信到自己的朋友圈即可获得2次抽奖机会，每天最多转发一条，每条只能转发一次，每月最高奖励4条；银卡会员每转发本宿一条微信到自己的朋友圈即可获得20元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励3条；金卡会员每转发本宿一条微信到自己的朋友圈即可获得80元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励2条；黑卡会员每转发本宿一条微信到自己的朋友圈即可获得450元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励1条。
+        <div>
+            <div class="introduce-title">
+                <div><img src="img/logo.jpg"></div>
+                <div class="introduce-title2">如何获得推广奖励？</div>
+            </div>
+            <div class="introduce-content" style="border: none;">
+                所有会员均可参加本宿的推广奖励计划。普通会员每转发本宿一条微信到自己的朋友圈即可获得2次抽奖机会，每天最多转发一条，每条只能转发一次，每月最高奖励4条；银卡会员每转发本宿一条微信到自己的朋友圈即可获得20元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励3条；金卡会员每转发本宿一条微信到自己的朋友圈即可获得80元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励2条；黑卡会员每转发本宿一条微信到自己的朋友圈即可获得450元的推广现金奖励，每天最多转发一条，每条只能转发一次，每月最高奖励1条。
+            </div>
         </div>
     </div>
 </div>
