抽奖的图片暂时更正，预存改为动态

--- a/js/pages/card/introduce.html
+++ b/js/pages/card/introduce.html
@@ -77,11 +77,11 @@
                     <td class="introduce-table-grey">升级条件</td>
                     <td>注册</td>
                     <td>预存
-                        <br>3600元</td>
+                        <br>{{@data[2].amount}}元</td>
                     <td>预存
-                        <br>9600元</td>
+                        <br>{{@data[1].amount}}元</td>
                     <td>预存
-                        <br>27000元</td>
+                        <br>{{@data[0].amount}}元</td>
                 </tr>
                 <tr>
                     <td class="introduce-table-grey">预存款返还（12次/权益年）</td>
