看会员介绍之类的不用登陆，增加银行卡输入位数，修改会员介绍轮播

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -29,7 +29,7 @@
                             <div class="bs-text-gray" style="font-size: 8px;">现金返还</div>
                         </div>
                     </div>
-                    <div class="bs-text-small bs-text-gray card-buy-con1">预存款现金返还，同时亦可享受黑卡至尊服务</div>
+                    <div class="bs-text-small bs-text-gray card-buy-con1">预存款现金返还，同时亦可享受{{@data.name}}至尊服务</div>
                 </div>
                 <div class="card-buy-right bs-text-small">
                     <div class="card-buy-con2">
