推广任务提示修改 会员介绍里的预存款说明链接修改 先屏蔽卡日志的捐款按钮

--- a/js/pages/card/introduce.html
+++ b/js/pages/card/introduce.html
@@ -135,7 +135,7 @@
     <div>
         <div class="introduce-title" style="margin-top: 15px; margin-bottom: 30px; border-bottom: 1px solid #ccc; padding-bottom: 20px;">
             <div class="introduce-note">※预存款返还时间：用户交纳预存款之日起15天后初次返，以后每隔30天返还一次。
-                <div class="introduce-note">※<a href="card-introduce-picture.html" style="color: #baa071">会员卡升级条件为什么要预存款？</a></div>
+                <div class="introduce-note">※<a href="card-promotion.html" style="color: #baa071">会员卡升级条件为什么要预存款？</a></div>
             </div>
         </div>
         <div>
