--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -58,7 +58,7 @@
             <div class="typeFilter-item">
                 <img src="img/icon/filter.svg" alt="" style="width: 32px;">
             </div>
-            <div class="typeFilter-item bs-text-51" style="margin: 17px 0 0 5px;">房型筛选
+            <div class="typeFilter-item bs-text-51" style="margin: 17px 0 0 5px;flex-grow: 1;">房型筛选
             </div>
         </div>
         
