--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -1,4 +1,3 @@
-
 <div ms-controller="detail">
     <div class="detail-back1">
         <div class="detail-title bs-text-small">
@@ -30,14 +29,14 @@
             <div :if="@listType==1">
                 <div class="detail-left-list" :for="el in @list1">
                     <div>
-                    <img class="detail-head" :attr="{src:'http://img.bensue.com/' + el.headUrl}" onerror="javascript:this.src='../img/defaultHeadImg.png';">
+                    <img class="detail-head" :attr="{src:'http://img.bensue.com/' + el.imgUrl}" onerror="javascript:this.src='../img/defaultHeadImg.png';">
                 </div>
                     <div style="margin-left: 30px;">
                         <div>
-                            <span class="bs-text-normal">{{el.name1}}</span>
-                            <span style="margin-left: 40px;">{{el.name1}}</span>
+                            <span class="bs-text-normal">{{el.name}}</span>
+                            <span style="margin-left: 40px;">{{el.grade}}</span>
                         </div>
-                        <div style="margin-top: 19px;">{{el.name1}}</div>
+                        <div style="margin-top: 19px;">{{el.reason}}</div>
                     </div>
                 </div>
             </div>
@@ -48,7 +47,7 @@
                 </div> -->
                     <div style="margin-left: 30px; width: 55vw;">
                         <div style="display: flex; justify-content: space-between;">
-                            <div class="bs-text-normal">{{cl.name2}}</div>
+                            <div class="bs-text-normal">{{cl.name}}</div>
                             <div style="margin-left: 50px;">累计捐赠
                                 <span class="intro-text-red">{{cl.number}}</span>元
                             </div>
@@ -59,8 +58,9 @@
             <br>
         </div>
     </div>
-    
     <div>
-        <button class="detail-button">确认捐赠</button>
+        <button class="detail-button" :click="@openPop()">确认捐赠</button>
     </div>
+    <!-- modal -->
+    <!-- 弹窗 -->
 </div>
