公益记录，捐赠以及捐赠的弹窗

--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -58,7 +58,7 @@
             <br>
         </div>
     </div>
-    <div>
+    <div :if="@amount!=''">
         <button class="detail-button" :click="@openPop()">确认捐赠</button>
     </div>
     <!-- modal -->
