--- a/js/pages/commonweal/commonweal-pop.html
+++ b/js/pages/commonweal/commonweal-pop.html
@@ -6,16 +6,16 @@
     }
 </style>
 <div ms-controller="detailPop">
-    <div class="bs-text-smaller" style="width: 90vw; text-align: center; padding: 22px 5vw 0;">
+    <div class="bs-text-smaller" style="text-align: center; padding: 22px 5vw 0;">
         <div>帮助他人改变命运</div>
         <div style="margin: 14px 0 22px;">你有权让自己独一无二</div>
         <div class="card-buy-circle">
             <div style="padding-top: 20vw;">
-                <div class="bs-text-gold" style="font-size: 16px;">{{@cs}}元/月</div>
+                <div class="bs-text-gold" style="font-size: 16px;">{{@amount}}元/月</div>
                 <div class="bs-text-normal">每月捐赠</div>
             </div>
         </div>
-        <div style="margin: 45px 0 20px;">
+        <div style="margin: 45px 8vw 10px; text-align: initial;">
             您的公益捐赠，每月将以您个人的名义自动划拨到响应公益账户。本宿公益负责对进入我们的平台的公益组织进行审核，但不干涉具体运营，如有任何疑问，请您致电该组织。
         </div>
     </div>
